--- a/.env
+++ b/.env
@@ -1,3 +1,3 @@
 REACT_APP_API_KEY = 57cf56909c6e80867de30c0d1d417030
-REACT_APP_URL = api.openweathermap.org/data/2.5/forecast?
+REACT_APP_URL = https://api.openweathermap.org/data/2.5/forecast?
 REACT_APP_ICON_URL = http://openweatermap.org/img/wn/
